# affine_types

./: CMakeLists.txt  README.md  main.cpp
include/: affine_types.hpp
